hot fix for fetching booking, chat is being bugged